removed un-necessery

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,13 @@
 mainn.py
+Untitled.ipynb
+__pycache__
+.ipynb_checkpoints
+.vscode
 confidential.json
+frds.csv
+Model2.ipynb
+newdataentry.ipynb
+Rough.ipynb
+rough.py
+sendingMoredata.ipynb
+tmdb5kPrePData2.csv
